# gvr-android-sdk

./: build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
samples/ndk-treasurehunt/: CMakeLists.txt  build.gradle
